# land-of-stamp

./: .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend-build.yml  backend-lint.yml  backend-security.yml  backend-test.yml  backend.yml  dependabot-fixup.yml  dependency-review.yml  deploy-backend.yml  deploy-frontend.yml  deps-update.yml  e2e.yml  frontend-build.yml  frontend-lint.yml  frontend-typecheck.yml  proto-check.yml
backend/: .bazelignore  .bazelrc  .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  MODULE.bazel  e2e_test.go  go.mod  go.sum  main.go
backend/apperrors/: BUILD.bazel  errors.go
backend/auth/: BUILD.bazel  jwt.go
backend/constants/: BUILD.bazel  constants.go
backend/db/: BUILD.bazel  db.go  models.go
backend/docs/: BUILD.bazel  docs.go  openapi.yaml
backend/handlers/: BUILD.bazel  auth.go  qr.go  shops.go  stamps.go
backend/interceptor/: BUILD.bazel  auth.go
backend/middleware/: BUILD.bazel  middleware.go
backend/service/: BUILD.bazel  auth.go  oauth.go  shop.go  stamp.go  testseed.go
backend/tools/: check-bazel-deps.sh
docs/: oauth.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts
frontend/e2e/: stempelkarte.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: LanguageSwitcher.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/components/stamps/: QRCodeDisplay.tsx  StampCard.tsx  StampSlot.tsx
frontend/src/context/: AuthContext.tsx  LocaleContext.tsx  ThemeContext.tsx  localeContext.ts  themeContext.ts
frontend/src/hooks/: useLocale.ts  useTheme.ts
frontend/src/i18n/: messages.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AdminDashboard.tsx  ChooseRolePage.tsx  ClaimPage.tsx  LandingPage.tsx  LoginPage.tsx  OAuthCallbackPage.tsx  ProfilePage.tsx  ScanPage.tsx  UserDashboard.tsx
proto/: generate.sh  stempelkarte.proto
scripts/: fix.sh
