load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = ["main.go"],
    importpath = "land-of-stamp-backend",
    visibility = ["//visibility:private"],
    deps = [
        "//auth",
        "//db",
        "//docs",
        "//handlers",
        "//middleware",
    ],
)

go_binary(
    name = "server",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)

