load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# gazelle:prefix land-of-stamp-backend
gazelle(name = "gazelle")

go_library(
    name = "land-of-stamp-backend_lib",
    srcs = ["main.go"],
    importpath = "land-of-stamp-backend",
    visibility = ["//visibility:private"],
    deps = [
        "//auth",
        "//db",
        "//docs",
        "//gen/pb/pbconnect",
        "//interceptor",
        "//middleware",
        "//service",
        "@com_connectrpc_connect//:connect",
    ],
)

go_binary(
    name = "server",
    embed = [":land-of-stamp-backend_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "land-of-stamp-backend_test",
    size = "medium",
    srcs = ["e2e_test.go"],
    embed = [":land-of-stamp-backend_lib"],
    deps = [
        "//auth",
        "//db",
        "//docs",
        "//gen/pb",
        "//gen/pb/pbconnect",
        "//interceptor",
        "//middleware",
        "//service",
        "@com_connectrpc_connect//:connect",
        "@com_github_google_uuid//:uuid",
    ],
)
