module(
    name = "stempelkarte-backend",
    version = "0.0.0",
)

# ── Go ──────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_uuid",
    "org_golang_x_crypto",
    "org_modernc_sqlite",
)

# ── Proto ───────────────────────────────────────────────
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.5")

