module(
    name = "stempelkarte-backend",
    version = "0.0.0",
)

# ── Go ──────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_glebarez_sqlite",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_uuid",
    "io_gorm_gorm",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
)


