load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["jwt.go"],
    importpath = "land-of-stamp-backend/auth",
    visibility = ["//:__subpackages__"],
    deps = [
        "//apperrors",
        "//constants",
        "@com_github_golang_jwt_jwt_v5//:jwt",
    ],
)
