load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = [
        "auth.go",
        "qr.go",
        "shops.go",
        "stamps.go",
    ],
    importpath = "land-of-stamp-backend/handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//auth",
        "//db",
        "//gen/pb",
        "//middleware",
        "@com_github_google_uuid//:uuid",
        "@org_golang_x_crypto//bcrypt",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)

