load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptor",
    srcs = ["auth.go"],
    importpath = "land-of-stamp-backend/interceptor",
    visibility = ["//:__subpackages__"],
    deps = [
        "//auth",
        "//constants",
        "//gen/pb/pbconnect",
        "@com_connectrpc_connect//:connect",
    ],
)
