load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "auth.go",
        "oauth.go",
        "shop.go",
        "stamp.go",
        "testseed.go",
    ],
    importpath = "land-of-stamp-backend/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//apperrors",
        "//auth",
        "//constants",
        "//db",
        "//gen/pb",
        "//gen/pb/pbconnect",
        "//interceptor",
        "@com_connectrpc_connect//:connect",
        "@com_github_google_uuid//:uuid",
        "@io_gorm_gorm//:gorm",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//github",
    ],
)
